# Game_Macro_Elite

./: .gitignore  BUILD.bat  BUILD_CPP.bat  CHECK_VERSION.py  CLONE_FRESH.bat  CLONE_VISUAL_STUDIO.bat  CMakeLists.txt  CORRIGER_LOCAL.ps1  DEBLOQUER.py  FIX_PULL.bat  FIX_PULL.ps1  FIX_START.bat  GO.bat  GO.ps1  GO.py  GameXClicker.py  Game_XClicker_Elite.sln  Game_XClicker_Elite.vcxproj  Game_XClicker_Elite.vcxproj.filters  Game_XClicker_Elite_Qt.vcxproj  INSTALL_COMPLET.bat  INSTALL_COMPLET.ps1  INSTALL_VISUAL_STUDIO.bat  LAUNCH_EXE.bat  LAUNCH_NATIVE.bat  LAUNCH_WEB.bat  LISEZMOI_LANCEMENT.txt  LISEZMOI_VISUAL_STUDIO.txt  OUVRE_MOI.py  OUVRE_MOI.pyw  OUVRIR_VISUAL_STUDIO.bat  OUVRIR_VISUAL_STUDIO.py  PYCHARM_SETUP.bat  README.md  RECOVER.bat  RECOVER.ps1  REPARER.bat  REPARER.py  RESTORE_ALL_PROJECTS.bat  RESTORE_ALL_PROJECTS.ps1  (+19 more)
animations/: FadeAnimation.cpp  FadeAnimation.h  GlowAnimation.cpp  GlowAnimation.h  HoverAnimation.cpp  HoverAnimation.h
app/: Application.cpp  Application.h  NavigationManager.cpp  NavigationManager.h  SettingsManager.cpp  SettingsManager.h  ThemeManager.cpp  ThemeManager.h
assets/favicon/: site.webmanifest
config/: runtime.py
core/: AppState.cpp  AppState.h  AssetGenerator.cpp  AssetGenerator.h  Constants.h  DebugManager.cpp  DebugManager.h  Enums.h  EventBus.cpp  EventBus.h  Logger.cpp  Logger.h  __init__.py  debug_log.py  engine.py  models.py  win32_input.py
cpp/: ARCHITECTURE.txt  CMakeLists.txt
cpp/src/: control_panel.cpp  control_panel.h  main.cpp  process_launcher.cpp  process_launcher.h
cpp/src/core/: engine.cpp  engine.hpp  models.hpp  rgb_engine.cpp  rgb_engine.hpp  win32_input.cpp  win32_input.hpp
docs/: STRUCTURE.md
graphics/: BlurEffect.cpp  BlurEffect.h  GlowEffect.cpp  GlowEffect.h  ShadowEffect.cpp  ShadowEffect.h
launcher/: desktop_main.py
launchers/: DEPRECATED.txt  Lancer.bat  START.bat
models/: DeviceModel.cpp  DeviceModel.h  MacroModel.cpp  MacroModel.h  ProfileModel.cpp  ProfileModel.h
nodejs/: package.json  server.js
nodejs/ai-guardian/: analyzer.js  fixer.js  package.json  server.js
nodejs/public/: index.html
nodejs/sidecar/: package.json  server.js
pages/Analytics/: AnalyticsPage.cpp  AnalyticsPage.h
pages/Dashboard/: DashboardPage.cpp  DashboardPage.h
pages/DeviceCenter/: DeviceCenterPage.cpp  DeviceCenterPage.h
pages/LightingEngine/: LightingPage.cpp  LightingPage.h
pages/MacroLibrary/: MacroLibraryPage.cpp  MacroLibraryPage.h
pages/MacroStudio/: MacroStudioPage.cpp  MacroStudioPage.h
pages/MobileCommand/: MobileCommandPage.cpp  MobileCommandPage.h
pages/ProfileManager/: ProfileManagerPage.cpp  ProfileManagerPage.h
profiles/: default.json  default_game.json
pycharm/: Game_XClicker_Elite.run.xml
resources/: gamex.qrc
resources/themes/: gamex-dark.json
scripts/: BUILD_EXE.bat  UPDATE_V3.bat  build_exe.py  find_python.py  migrate_launchers.bat  repair_launchers.py  setup.py
services/: DeviceService.cpp  DeviceService.h  MacroEngine.cpp  MacroEngine.h  MacroService.cpp  MacroService.h  ProfileService.cpp  ProfileService.h  RGBService.cpp  RGBService.h  __init__.py  ai_guardian.py  api_monitor.py  bootstrap.py  engine_proxy.py  node_bridge.py  node_sidecar.py  profile_manager.py  sidecar_api.py
styles/: cards.qss  dock.qss  keyboard.qss  main.qss  rgb.qss  sidebar.qss  titlebar.qss
tests/: DeviceTests.cpp  ThemeTests.cpp  WidgetTests.cpp  run_macro_test.py  test_icue_static.py  test_ui.py
ui/: __init__.py  asset_system.py  control_center.py  control_panel.py  main_window.py  mission_control.py  sanctuary_window.py  splash_screen.py  styles.py
ui/pages/: dashboard_page.py  devices_page.py  home_page.py  macros_page.py  settings_page.py
ui/styles/: diablo_theme.py  icue_theme.py
ui/tabs/: __init__.py  dashboard_tab.py  keyboard_tab.py  mouse_tab.py  rgb_tab.py  right_click_tab.py  settings_tab.py
ui/widgets/: __init__.py  background_widget.py  device_center_view.py  device_tile.py  header_bar.py  lighting_setup_panel.py  macro_panel.py  mural_panel.py  sensor_panel.py  sidebar.py  status_card.py
utils/: autopatch.py  bootstrap.py  debug.py  diagnostic_bot.py  legacy_patch.py
web/mission-control/: index.html  package.json
widgets/cards/: DeviceCard.cpp  DeviceCard.h  InfoCard.cpp  InfoCard.h  StatsCard.cpp  StatsCard.h
widgets/charts/: CpuChartWidget.cpp  CpuChartWidget.h  RamChartWidget.cpp  RamChartWidget.h
widgets/dock/: DeviceDockWidget.cpp  DeviceDockWidget.h  DockDeviceItem.cpp  DockDeviceItem.h
widgets/keyboard/: KeyAnimator.cpp  KeyAnimator.h  KeyWidget.cpp  KeyWidget.h  KeyboardWidget.cpp  KeyboardWidget.h
widgets/mouse/: MouseButtonWidget.cpp  MouseButtonWidget.h  MouseWidget.cpp  MouseWidget.h
widgets/rgb/: ColorPickerWidget.cpp  ColorPickerWidget.h  RGBPanelWidget.cpp  RGBPanelWidget.h  RGBPreviewWidget.cpp  RGBPreviewWidget.h
widgets/sidebar/: SidebarButton.cpp  SidebarButton.h  SidebarWidget.cpp  SidebarWidget.h
widgets/stats/: CounterWidget.cpp  CounterWidget.h  StatsPanelWidget.cpp  StatsPanelWidget.h
widgets/titlebar/: TitleBarWidget.cpp  TitleBarWidget.h
windows/: AboutWindow.cpp  AboutWindow.h  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  SplashScreen.cpp  SplashScreen.h
